[package]
name = "pad-motion"
version = "0.1.1"
authors = ["zduny <dzduniak@gmail.com>"]
edition = "2018"
description = "Implementation of Cemuhook gamepad motion protocol. Includes client and server implementations."
license = "Apache-2.0"
repository = "https://github.com/zduny/pad_motion"
documentation = "https://docs.rs/pad-motion/"
keywords = ["cemu", "cemuhook", "protocol", "gyroscope", "motion"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pad_motion"

[dependencies]
byteorder = "1.3.4"
crc = "1.8.1"
rand = "0.7.3"
crossbeam-queue = "0.2.1"

[dev-dependencies]
ctrlc = "3.1.4"
gilrs = "0.7.4"
multiinput = "0.0.15"
