[package]
name = "pad-motion"
version = "0.1.6"
authors = ["zduny <dzduniak@gmail.com>"]
edition = "2018"
description = "Implementation of Cemuhook gamepad motion protocol. Includes client and server implementations."
license = "Apache-2.0"
repository = "https://github.com/zduny/pad_motion"
documentation = "https://docs.rs/pad-motion/"
keywords = ["cemu", "cemuhook", "protocol", "gyroscope", "motion"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pad_motion"

[dependencies]
byteorder = "1.4.2"
crc32fast = "1.2.1"
rand = "0.8.3"
crossbeam-queue = "0.3.1"

[dev-dependencies]
ctrlc = "3.1.8"
gilrs = "0.8.0"
multiinput = "0.1.0"
